--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
