--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "plugin:tailwindcss/recommended",
+    "plugin:security/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/stylistic",
+    "plugin:jsx-a11y/recommended",
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  "rules": {
+    "tailwindcss/no-custom-classname": "off",
+    "security/detect-object-injection": "off",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+  }
 }
